apps/podinfo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-podinfo
  labels:
    app: podinfo
