apps/podinfo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
  namespace: app-podinfo
  labels:
    app: podinfo
    test: "2"
spec:
  ports:
  - name: http-default
    port: 80
    targetPort: 9898
  selector:
    fronted-by: podinfo-service
  type: ClusterIP
