apps/podinfo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: podinfo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: adp-spinnaker-gke-lb-podinfo
    networking.gke.io/managed-certificates: podinfo-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    app: podinfo
spec:
  backend:
    serviceName: podinfo-service
    servicePort: 80
